--- a/Interface/UI/managerMain.ui
+++ b/Interface/UI/managerMain.ui
@@ -1448,7 +1448,7 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="loam_requests_widget">
+    <widget class="QWidget" name="loan_requests_widget">
      <widget class="QTableWidget" name="loan_req_tableWidget">
       <property name="geometry">
        <rect>
@@ -1463,17 +1463,17 @@ p, li { white-space: pre-wrap; }
       </attribute>
       <column>
        <property name="text">
+        <string>req_no</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Cus_id</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>Months</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Req_no</string>
        </property>
       </column>
       <column>
@@ -1565,80 +1565,28 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="page">
-     <widget class="QLabel" name="label_14">
+    <widget class="QWidget" name="skip_month_widget">
+     <widget class="QCalendarWidget" name="calendarWidget">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>260</y>
-        <width>241</width>
-        <height>61</height>
+        <x>90</x>
+        <y>40</y>
+        <width>461</width>
+        <height>271</height>
        </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Bir Ay  ilerletebilmek</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="changeDate_button">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>270</y>
-        <width>141</width>
-        <height>41</height>
+        <x>260</x>
+        <y>350</y>
+        <width>151</width>
+        <height>71</height>
        </rect>
       </property>
-      <property name="font">
-       <font>
-        <pointsize>13</pointsize>
-       </font>
-      </property>
       <property name="text">
-       <string>ilerlet</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_15">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>120</y>
-        <width>131</width>
-        <height>51</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>13</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Current Day: </string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_16">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>130</y>
-        <width>291</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>13</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color:red</string>
-      </property>
-      <property name="text">
-       <string>13/6/2022</string>
+       <string>Change Date</string>
       </property>
      </widget>
     </widget>
@@ -1659,7 +1607,7 @@ p, li { white-space: pre-wrap; }
        <bool>true</bool>
       </property>
       <property name="rowCount">
-       <number>7</number>
+       <number>6</number>
       </property>
       <attribute name="horizontalHeaderMinimumSectionSize">
        <number>47</number>
@@ -1673,11 +1621,6 @@ p, li { white-space: pre-wrap; }
       <attribute name="verticalHeaderDefaultSectionSize">
        <number>40</number>
       </attribute>
-      <row>
-       <property name="text">
-        <string>1</string>
-       </property>
-      </row>
       <row/>
       <row/>
       <row/>
@@ -1691,12 +1634,12 @@ p, li { white-space: pre-wrap; }
       </column>
       <column>
        <property name="text">
-        <string>Type</string>
+        <string>Date</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Date</string>
+        <string>Type</string>
        </property>
       </column>
       <column>
@@ -1714,38 +1657,18 @@ p, li { white-space: pre-wrap; }
         <string>Total</string>
        </property>
       </column>
-      <item row="0" column="0">
+      <column>
        <property name="text">
-        <string>1</string>
+        <string>source_balance</string>
        </property>
-      </item>
-      <item row="0" column="1">
+      </column>
+      <column>
        <property name="text">
-        <string>Withdraw</string>
+        <string>recieve_balance</string>
        </property>
-      </item>
-      <item row="0" column="2">
-       <property name="text">
-        <string>13-12-2020</string>
-       </property>
-      </item>
-      <item row="0" column="3">
-       <property name="text">
-        <string>account 901</string>
-       </property>
-      </item>
-      <item row="0" column="4">
-       <property name="text">
-        <string>kullanci 302</string>
-       </property>
-      </item>
-      <item row="0" column="5">
-       <property name="text">
-        <string>2300</string>
-       </property>
-      </item>
+      </column>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="list_button">
       <property name="geometry">
        <rect>
         <x>510</x>
@@ -1763,7 +1686,7 @@ p, li { white-space: pre-wrap; }
        <string>List</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit">
+     <widget class="QLineEdit" name="transactionsNumber_lineEdit">
       <property name="geometry">
        <rect>
         <x>110</x>
@@ -1781,7 +1704,7 @@ p, li { white-space: pre-wrap; }
        <string>Insert a number</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="last_lable">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1799,7 +1722,7 @@ p, li { white-space: pre-wrap; }
        <string>Last</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="transaction_lable">
       <property name="geometry">
        <rect>
         <x>320</x>
@@ -1817,7 +1740,7 @@ p, li { white-space: pre-wrap; }
        <string>Transaction</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="deadLockSayisi_label">
       <property name="geometry">
        <rect>
         <x>30</x>
@@ -1835,7 +1758,7 @@ p, li { white-space: pre-wrap; }
        <string>DeadLock Sayisi:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_11">
+     <widget class="QLabel" name="islemler_lable">
       <property name="geometry">
        <rect>
         <x>30</x>
@@ -1853,7 +1776,7 @@ p, li { white-space: pre-wrap; }
        <string>Islemler: </string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_12">
+     <widget class="QLabel" name="deadLocks_lable">
       <property name="geometry">
        <rect>
         <x>140</x>
@@ -1871,10 +1794,10 @@ p, li { white-space: pre-wrap; }
        <string notr="true">color:green</string>
       </property>
       <property name="text">
-       <string>(1-3-4) , (2-7) , (8-9)</string>
+       <string/>
       </property>
      </widget>
-     <widget class="QLabel" name="label_13">
+     <widget class="QLabel" name="deadLockNumber_label">
       <property name="geometry">
        <rect>
         <x>230</x>
@@ -1892,7 +1815,7 @@ p, li { white-space: pre-wrap; }
        <string notr="true">color:green</string>
       </property>
       <property name="text">
-       <string>3</string>
+       <string/>
       </property>
      </widget>
     </widget>
@@ -2007,14 +1930,14 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
      <item>
-      <widget class="QRadioButton" name="add_customer_2">
+      <widget class="QRadioButton" name="calendar_radio">
        <property name="font">
         <font>
          <pointsize>10</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Ay iletmek</string>
+        <string>Ay ilerletmek</string>
        </property>
       </widget>
      </item>
